--- a/Angular/app/Content/calendar.component.html
+++ b/Angular/app/Content/calendar.component.html
@@ -1,9 +1,10 @@
 <div id="Calendar">
     <div id="calender-parent" *ngFor="let event of events">
-        <div class="calender-container" style="position: relative">
+        <div class="calender-container">
             <div class="start-date">
-                <div style="display: inline-block; padding-left: 0"><img src="http://www.gatlinandsonsknifecompany.com/Images/InterfaceElements/IconCalendar_2.gif" style="vertical-align: middle; margin-top: -4px;" class="calender-image" /> </div>
-                <div style="display: inline-block"><label id="lblStartDate">{{event.Date}}</label></div>
+                <div style="float:left;padding: 0;margin: 0;"><span class="glyphicon glyphicon-calendar"></span> <span id="lblStartDate">{{event.Date}}</span></div>
+                <div style="float:right;padding: 0;margin: 0;" class="button-arrow open" (click) = "showHideDetails()" title="Click for more information"></div>
+                <div class="clearfix"></div>
             </div>
             <div class="name">
                 <label id="lblEventTitle" class="event-name" style="white-space:nowrap">{{event.Event}}</label><br />
@@ -17,10 +18,10 @@
             </div>
             <div class="map" style="width:100%; height:180px; margin: 10px 0; display: none; text-align: right">
                 <!-- Google Map -->
-                <iframe style="width: 100%; height:150px" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="http://maps.google.com/maps?f=q&source=s_q&hl=en&geocode=&q=${Address}&ie=UTF8&z=15&t=m&iwloc=near&output=embed"></iframe>
-                <a target="_blank" style="font-size:11px; color: #e7e7e7; display:inline-block; margin-top: 5px" href="http://maps.google.com/maps?f=q&source=s_q&hl=en&geocode=&q=${Address}&ie=UTF8&z=15&t=m&iwloc=near" class="more-info">View Larger Map &raquo;</a>
-            </div>
-            <div id="ShowHideDetails" style="position: absolute; top: 5px; right: 4px" class="button-arrow open" data-bind="click: $root.showHideDetails" title="Click for more information"></div>
+            <iframe style="width: 100%; height:150px" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" [src]="event.Address | safeHtml"></iframe>
+                <a target="_blank" style="font-size:11px; color: #e7e7e7; display:inline-block; margin-top: 5px" href="{{(event.Address | safeHtml)}}" class="more-info">View Larger Map &raquo;</a>
+            </div>     
+            <!--<div style="position: absolute; top: 5px; right: 4px" class="button-arrow open" (click) = "showHideDetails()" title="Click for more information"></div>       -->
         </div>
     </div>
 </div>
